Added result control to user details form for user notifications input

--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -91,7 +91,8 @@
 
   <user-notifications-input
     [apiErrors]="apiErrors"
-    [control]="settingsForm.controls['ignored_notifications']">
+    [control]="settingsForm.controls['ignored_notifications']"
+    [resultControl]="settingsForm.controls['ignored_notifications_result']">
   </user-notifications-input>
 
   <form-section-title-text
