Bugfix: the result control value used for catching multiple select inputs is replaced by angular on form submits sometimes. Solved it by using a result array instead. Ugly but works…

--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -92,7 +92,7 @@
   <user-notifications-input
     [apiErrors]="apiErrors"
     [control]="settingsForm.controls['ignored_notifications']"
-    [resultControl]="settingsForm.controls['ignored_notifications_result']">
+    [multipleResults]="ignoredNotificationsResults">
   </user-notifications-input>
 
   <form-section-title-text
