Added number input and based the years of experience input on that.

--- a/src/app/components/forms/user-profile-form/user-profile-form.component.html
+++ b/src/app/components/forms/user-profile-form/user-profile-form.component.html
@@ -161,6 +161,12 @@
     [showLabel]="false">
   </resume-input>
 
+  <occupations-input
+    [occupationsControl]="profileForm.controls['occupations']"
+    [userOccupationsControl]="profileForm.controls['user_occupations']"
+    [apiErrors]="apiErrors">
+  </occupations-input>
+
   <job-experience-input
     [control]="profileForm.controls['job_experience']"
     [apiErrors]="apiErrors">
