--- a/src/app/components/cards/upload-document-card/upload-document-card.component.scss
+++ b/src/app/components/cards/upload-document-card/upload-document-card.component.scss
@@ -3,4 +3,10 @@
 .ui.card {
   margin-top: 1em;
   margin-bottom: 1em;
+
+  .input-hint {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: -5px;
+  }
 }
