Display the personal letter input.

--- a/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
+++ b/src/app/components/forms/user-missing-traits-next-form/user-missing-traits-next-form.component.html
@@ -23,6 +23,13 @@
     *ngIf="!informationProvided && missingUserTraitsKeys && missingUserTraitsKeys[currentMissingUserTraitIndex] === 'cv'">
   </resume-input>
 
+  <personal-letter-input
+    [centered]="true"
+    [showLabel]="false"
+    [hint]="missingUserTraits?.personal_letter?.hint"
+    *ngIf="!informationProvided && missingUserTraitsKeys && missingUserTraitsKeys[currentMissingUserTraitIndex] === 'personal_letter'">
+  </personal-letter-input>
+
   <first-name-input
     [apiErrors]="apiErrors"
     [control]="updateForm.controls.first_name"
