--- a/src/app/components/forms/user-profile-form/user-profile-form.component.html
+++ b/src/app/components/forms/user-profile-form/user-profile-form.component.html
@@ -18,6 +18,11 @@
     [control]="profileForm.controls['description']">
   </description-input>
 
+  <personal-letter-input
+    [centered]="true"
+    [showLabel]="false">
+  </personal-letter-input>
+
   <form-section-title-text
     [text]="'user.profile.form.social.network.section.header' | translate"
     icon="users">
